Remove extra plots

--- a/try_our_own_cells_WORKING.ipynb
+++ b/try_our_own_cells_WORKING.ipynb
@@ -714,11 +714,11 @@
     "plt.xlabel('Cell compartment (xmid)')\n",
     "plt.ylabel('Cell compartment (zmid)')\n",
     "\n",
-    "# plot receptor cell vmem interactively over time\n",
-    "def plot_time(t=100):\n",
-    "    plot_cell(receptor_cell, x_off=100, voltage=receptor_cell.vmem[:,t], palette='plasma')\n",
-    "    plt.title('Receptor: membrane voltage over time')\n",
-    "wdg.interact(plot_time)"
+    "# # plot receptor cell vmem interactively over time\n",
+    "# def plot_time(t=100):\n",
+    "#     plot_cell(receptor_cell, x_off=100, voltage=receptor_cell.vmem[:,t], palette='plasma')\n",
+    "#     plt.title('Receptor: membrane voltage over time')\n",
+    "# wdg.interact(plot_time)"
    ]
   },
   {
