Add parameters units in the comments

--- a/try_our_own_cells_Contour.ipynb
+++ b/try_our_own_cells_Contour.ipynb
@@ -73,8 +73,8 @@
     "#     'morphology' : 'morphology/pyramidal_layer5.hoc',  # pyramidal neuron (cortex)\n",
     "#     'morphology' : 'morphology/aspiny_layer3.hoc',     # aspiny neuron (cortex)\n",
     "#     'morphology' : 'morphology/stellate_layer4.hoc' ,   # stellate neuron (cortex)\n",
-    "    'cm' : 1.0,                 # membrane capacitance\n",
-    "    'Ra' : 150.,                # axial resistance\n",
+    "    'cm' : 1.0,                 # membrane capacitance - Defaults to 1.0 uF/cm2 \n",
+    "    'Ra' : 150.,                # axial resistance - Defaults to 150 Ohm/cm \n",
     "    'passive' : True,           # turn on NEURONs passive mechanism for all sections\n",
     "    'nsegs_method' : None,      # spatial discretization method\n",
     "    'dt' : 2**-6,               # simulation time step size\n",
