--- a/try_our_own_purkinje_cells.ipynb
+++ b/try_our_own_purkinje_cells.ipynb
@@ -68,18 +68,18 @@
    "source": [
     "cellParameters = {\n",
     "    'morphology' : 'morphology/purkinje.hoc',\n",
-    "    'cm' : 0.65,                   \n",
-    "    'Ra' : 120,                \n",
-    "    'v_init' : -62,  \n",
+    "    'cm' : 0.65,                # membrane conductance       \n",
+    "    'Ra' : 120,                 # axial resistance\n",
+    "    'v_init' : -62,             # initial membrane potential\n",
     "    'passive' : True,           # turn on NEURONs passive mechanism for all sections\n",
     "    'nsegs_method' : None,      # spatial discretization method\n",
     "    'dt' : 2**-6,               # simulation time step size\n",
     "    'tstart' : 0,               # start time of simulation\n",
-    "    'tstop' : 400,               # stop simulation\n",
-    "    'celsius': 34,\n",
+    "    'tstop' : 400,              # stop simulation\n",
+    "    'celsius': 34,              \n",
     "    'pt3d' : True,\n",
-    "    'extracellular': True,\n",
-    "    'passive_parameters' : {'g_pas' : 1/120236, 'e_pas' : -62},\n",
+    "    'extracellular': True,      # extracellular electric field\n",
+    "    'passive_parameters' : {'g_pas' : 1/120236, 'e_pas' : -62},   # passive conductance and passive current\n",
     "}"
    ]
   },
