--- a/try_our_own_mitral_cells.ipynb
+++ b/try_our_own_mitral_cells.ipynb
@@ -564,20 +564,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gen Vmem soma peak: -57.309852368965124\n",
       "Gen Vmem soma var: 4.6901476310348755\n",
       "Rec Vmem soma peak: -61.99993965334614\n",
       "Rec Vmem soma var: 6.0931876916470173e-05\n",
-      "Gen Vmem dend1 var: 3.8021626463553915\n",
       "Rec Vmem dend1 peak: -61.99999985687609\n",
       "Rec Vmem dend1 var: 3.8947504535258304e-05\n",
-      "Gen Vmem dend2 var: 2.369317593442723\n",
       "Rec Vmem dend2 peak: -62.0\n",
       "Rec Vmem dend2 var: 1.068209436283496e-05\n"
      ]
@@ -636,16 +635,15 @@
     "\n",
     "plt.savefig('mitral_gen_rec_vmem.png', dpi=300)\n",
     "\n",
-    "\n",
+    "print('Gen Vmem soma peak:', max(generator_cell.somav))\n",
     "print('Gen Vmem soma var:', max(generator_cell.somav)-min(generator_cell.somav))\n",
+    "\n",
     "print('Rec Vmem soma peak:', max(receptor_cell.somav))\n",
     "print('Rec Vmem soma var:', max(receptor_cell.somav)-min(receptor_cell.somav))\n",
     "\n",
-    "print('Gen Vmem dend1 var:', max(generator_cell.vmem[dend1_index])-min(generator_cell.vmem[dend1_index]))\n",
     "print('Rec Vmem dend1 peak:', max(receptor_cell.vmem[dend1_index]))\n",
     "print('Rec Vmem dend1 var:', max(receptor_cell.vmem[dend1_index])-min(receptor_cell.vmem[dend1_index]))\n",
     "\n",
-    "print('Gen Vmem dend2 var:', max(generator_cell.vmem[dend2_index])-min(generator_cell.vmem[dend2_index]))\n",
     "print('Rec Vmem dend2 peak:', max(receptor_cell.vmem[dend2_index]))\n",
     "print('Rec Vmem dend2 var:', max(receptor_cell.vmem[dend2_index])-min(receptor_cell.vmem[dend2_index]))"
    ]
