--- a/try_our_own_pyramidal_cells.ipynb
+++ b/try_our_own_pyramidal_cells.ipynb
@@ -559,22 +559,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gen Vmem soma peak: -65.88900397856595\n",
       "Gen Vmem soma var: 4.1109960214340475\n",
       "Rec Vmem soma peak: -69.99999156198419\n",
       "Rec Vmem soma var: 1.0307251173458098e-05\n",
-      "Gen Vmem dend var: 3.8495299620341115\n",
-      "Rec Vmem dend peak: -69.99982746846982\n",
-      "Rec Vmem dend var: 0.00017253153018259582\n",
-      "Gen Vmem axon var: 2.9757193688412826\n",
-      "Rec Vmem axon peak: -69.99999726517716\n",
-      "Rec Vmem axon var: 4.660876976458894e-05\n"
+      "Rec Vmem dend1 peak: -69.99982746846982\n",
+      "Rec Vmem dend1 var: 0.00017253153018259582\n",
+      "Rec Vmem dend2 peak: -69.99999726517716\n",
+      "Rec Vmem dend2 var: 4.660876976458894e-05\n"
      ]
     },
     {
@@ -608,22 +607,22 @@
     "plt.ylabel('Membrane voltage (mV)')\n",
     "\n",
     "plt.subplot(425)\n",
-    "plt.plot(generator_cell.tvec, generator_cell.vmem[dend1_index], 'k'), plt.title('Generator: Vmem in dendrite')\n",
+    "plt.plot(generator_cell.tvec, generator_cell.vmem[dend1_index], 'k'), plt.title('Generator: Vmem in dend1')\n",
     "plt.xlabel('Time (ms)')\n",
     "plt.ylabel('Membrane voltage (mV)')\n",
     "\n",
     "plt.subplot(426)\n",
-    "plt.plot(receptor_cell.tvec, receptor_cell.vmem[dend1_index], 'k'), plt.title('Receptor: Vmem in dendrite')\n",
+    "plt.plot(receptor_cell.tvec, receptor_cell.vmem[dend1_index], 'k'), plt.title('Receptor: Vmem in dend1')\n",
     "plt.xlabel('Time (ms)')\n",
     "plt.ylabel('Membrane voltage (mV)')\n",
     "\n",
     "plt.subplot(427)\n",
-    "plt.plot(generator_cell.tvec, generator_cell.vmem[dend2_index], 'k'), plt.title('Generator: Vmem in axon')\n",
+    "plt.plot(generator_cell.tvec, generator_cell.vmem[dend2_index], 'k'), plt.title('Generator: Vmem in dend2')\n",
     "plt.xlabel('Time (ms)')\n",
     "plt.ylabel('Membrane voltage (mV)')\n",
     "\n",
     "plt.subplot(428)\n",
-    "plt.plot(receptor_cell.tvec, receptor_cell.vmem[dend2_index], 'k'), plt.title('Receptor: Vmem in axon')\n",
+    "plt.plot(receptor_cell.tvec, receptor_cell.vmem[dend2_index], 'k'), plt.title('Receptor: Vmem in dend2')\n",
     "plt.xlabel('Time (ms)')\n",
     "plt.ylabel('Membrane voltage (mV)')\n",
     "\n",
@@ -631,17 +630,17 @@
     "\n",
     "plt.savefig('pyramidal_gen_rec_vmem.png', dpi=300)\n",
     "\n",
+    "print('Gen Vmem soma peak:', max(generator_cell.somav))\n",
     "print('Gen Vmem soma var:', max(generator_cell.somav)-min(generator_cell.somav))\n",
+    "\n",
     "print('Rec Vmem soma peak:', max(receptor_cell.somav))\n",
     "print('Rec Vmem soma var:', max(receptor_cell.somav)-min(receptor_cell.somav))\n",
     "\n",
-    "print('Gen Vmem dend var:', max(generator_cell.vmem[dend1_index])-min(generator_cell.vmem[dend1_index]))\n",
-    "print('Rec Vmem dend peak:', max(receptor_cell.vmem[dend1_index]))\n",
-    "print('Rec Vmem dend var:', max(receptor_cell.vmem[dend1_index])-min(receptor_cell.vmem[dend1_index]))\n",
+    "print('Rec Vmem dend1 peak:', max(receptor_cell.vmem[dend1_index]))\n",
+    "print('Rec Vmem dend1 var:', max(receptor_cell.vmem[dend1_index])-min(receptor_cell.vmem[dend1_index]))\n",
     "\n",
-    "print('Gen Vmem axon var:', max(generator_cell.vmem[dend2_index])-min(generator_cell.vmem[dend2_index]))\n",
-    "print('Rec Vmem axon peak:', max(receptor_cell.vmem[dend2_index]))\n",
-    "print('Rec Vmem axon var:', max(receptor_cell.vmem[dend2_index])-min(receptor_cell.vmem[dend2_index]))"
+    "print('Rec Vmem dend2 peak:', max(receptor_cell.vmem[dend2_index]))\n",
+    "print('Rec Vmem dend2 var:', max(receptor_cell.vmem[dend2_index])-min(receptor_cell.vmem[dend2_index]))"
    ]
   },
   {
